[gd_scene load_steps=3 format=3 uid="uid://b5fupgk1oatr5"]

[ext_resource type="Script" path="res://pause_menu.gd" id="1_grbi7"]

[sub_resource type="LabelSettings" id="LabelSettings_5lfxa"]
font_size = 50

[node name="PauseMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_grbi7")

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_right = 1920.0
offset_bottom = 800.0
text = "Game Paused"
label_settings = SubResource("LabelSettings_5lfxa")
horizontal_alignment = 1
vertical_alignment = 1

[node name="ContinueGameButton" type="Button" parent="."]
layout_mode = 0
offset_left = 860.0
offset_top = 600.0
offset_right = 1060.0
offset_bottom = 650.0
text = "Resume Game"

[node name="SettingsButton" type="Button" parent="."]
layout_mode = 0
offset_left = 860.0
offset_top = 700.0
offset_right = 1060.0
offset_bottom = 750.0
text = "Settings"

[node name="MainMenuButton" type="Button" parent="."]
layout_mode = 0
offset_left = 860.0
offset_top = 800.0
offset_right = 1060.0
offset_bottom = 850.0
text = "Main Menu"
